--- a/css/_default.sass
+++ b/css/_default.sass
@@ -98,8 +98,10 @@ strong, em, b, i
 p
   &.image
     overflow-x: scroll
+    @include scrollbars
     img
       @include bordered
+
   &.youtube
     text-align: center
 
