--- a/css/_theme.sass
+++ b/css/_theme.sass
@@ -22,3 +22,11 @@ $border-color-bottom: change-color($border-color, $lightness: 40%)
   border-radius: 0.5rem
   border-color: $border-color-top $border-color-sides $border-color-bottom
   box-sizing: border-box
+
+@mixin scrollbars
+  &::-webkit-scrollbar
+    height: 0.5rem
+    width: 0.5rem
+  &::-webkit-scrollbar-thumb
+    background-color: cadetblue
+    border-radius: 0.5rem
